# genetive-rel-extractor

./: README.md  cache.txt  corpus_all.parquet  genitif_tree_model.dot  genitif_tree_model.pkl  main.py  pyproject.toml  result.txt  rf_2025-11-18_15-03-09.tree.dot  rf_2025-11-18_16-25-44.tree.dot  rf_2025-12-09_11-21-44.tree.dot  rf_2025-12-09_12-06-52.tree.dot
data/: corpus.txt  corpus_DE.txt  vocabulary_enriched.json  vocabulary_enriched_sorted.json
data/cache/: infos_by_name_1.json  infos_by_name_36.json
data/corpus/: r_holo_corpus.json  r_lieu_origine.json  r_processus_patient.json  r_social_tie.json  r_topic.json
data/corpus_cleaned/: r_depict.json  r_has_causatif.json  r_has_property-1.json  r_lieu_origine.json  r_social_tie.json  r_topic.json
data/corpus_filled/: r_depict.json  r_lieu.json  r_lieu_origine.json  r_objet_matiere.json  r_own.json  r_processus_instru.json  r_processus_patient.json  r_product_of.json  r_quantificateur.json
data/corpus_filled_norm/: r_depict.json  r_has_causatif.json  r_lieu.json  r_lieu_origine.json  r_own.json  r_processus_agent.json  r_processus_instru.json  r_product_of.json  r_quantificateur.json  r_social_tie.json  r_topic.json
data/embeddings/: r_has_property-1_features.json  r_lieu_origine_features.json  r_own_features.json  r_processus_patient_features.json  r_social_tie_features.json
data/features/: r_lieu_features.json  (+4 more)
img/: activity_diag.txt  classdiag.txt
new/: inference.py
src/: __main__.py  eval.py
src2/: __init__.py  __main__.py  api.py  base.py  loader.py  models.py  similarity.py  vocabulary.py
(+316 files in other folders)
