[project]
name = "genetive-rel-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.3.2",
    "numpy<=1.28",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "typer>=0.19.1",
    "typing>=3.10.0.0",
    "scipy<=1.11.4",
    "matplotlib>=3.10.6",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "seaborn>=0.13.2",
]
